--- a/static/index.html
+++ b/static/index.html
@@ -154,7 +154,7 @@ function caqi(prop, value, limits) {
 }
 
 // current data
-
+getCurrent()
 setInterval(getCurrent, 5000)
 function getCurrent() {
   get("data/current", (res) => {
